--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>С Днём Матери! 💐</title>
+    <title>С Днём Мамы! 💐</title>
     <style>
         * {
             margin: 0;
@@ -250,7 +250,7 @@
             <p>Знаешь, мам, мой самый главный подарок для тебя — это...</p>
             <p style="text-align: center; font-size: 1.5em; margin: 20px 0;">✨ Я! ✨</p>
             <p>Потому что я — твоё самое большое счастье и гордость! 😊</p>
-            <p>А теперь смотри, что ещё я подготовил(а) для тебя! 👇</p>
+            <p>А теперь смотри, что ещё я подготовил для тебя! 👇</p>
         </div>
 
         <div class="memory" id="memory1Content">
@@ -341,9 +341,11 @@
             <p>Чтобы у тебя было больше времени на себя и свои увлечения! 🎨</p>
             <p>Чтобы ты знала, как сильно я тебя люблю и ценю! 💖</p>
             <p>Ты — самый важный человек в моей жизни! 🌈</p>
+            <p>Чтобы у тебя наконец появился красный мерседес кабриалет💝</p>
+            <p3>Сайт я писал +- 1-2 часа с 23-х до 1 часа ночи))</p3>
 
             <p style="text-align: center; font-size: 1.3em; margin-top: 20px;">
-                С Днём Матери! 🥳🎉🎊
+                С Днём Мамы! 🥳🎉🎊
             </p>
         </div>
     </div>
@@ -548,3 +550,4 @@
     </script>
 </body>
 </html>
+
