--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>💖 С Днём Матери! 💖</h1>
+        <h1>💖 С Днём Мамы! 💖</h1>
         <p class="subtitle">Любимой мамочке 🥰</p>
 
         <!-- Главная кнопка -->
         <button class="btn" id="giftBtn">
-            🎁 Открыть подарок
+            🎁 Открыть подарок 🎁
         </button>
 
         <!-- Контейнер для остальных кнопок (появится после подарка) -->
@@ -550,4 +550,5 @@
     </script>
 </body>
 </html>
+
 
