--- a/index.html
+++ b/index.html
@@ -342,11 +342,13 @@
             <p>Чтобы ты знала, как сильно я тебя люблю и ценю! 💖</p>
             <p>Ты — самый важный человек в моей жизни! 🌈</p>
             <p>Чтобы у тебя наконец появился красный мерседес кабриалет💝</p>
-            <p3>Сайт я писал +- 1-2 часа с 23-х до 1 часа ночи))</p3>
+            
 
             <p style="text-align: center; font-size: 1.3em; margin-top: 20px;">
                 С Днём Мамы! 🥳🎉🎊
             </p>
+
+            <p5>Сайт я писал +- 1 - 2 часа с 23-х до 1 часа ночи, старался очень сильно так как сроки были сжатые))</p5>
         </div>
     </div>
 
@@ -550,5 +552,6 @@
     </script>
 </body>
 </html>
+
 
 
