--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <body>
     <div class="container">
         <h1>💖 С Днём Мамы! 💖</h1>
-        <p class="subtitle">Любимой мамочке 🥰</p>
+        <p class="subtitle">Любимой мамочке от нашей семьи 🥰</p>
 
         <!-- Главная кнопка -->
         <button class="btn" id="giftBtn">
@@ -255,7 +255,7 @@
 
         <div class="memory" id="memory1Content">
             <h2>🌸 Наши прекрасные моменты 🌸</h2>
-            <p>Этот альбом собрал самые тёплые и радостные мгновения нашей жизни! 💕</p>
+            <p>Этот альбом собрал самые тёплые и радостные мгновения нашей семьи и жизни! 💕</p>
             <p>Каждая фотография — это история нашей любви и счастья! ✨</p>
 
             <!-- Свайп-галерея для первого воспоминания -->
@@ -341,14 +341,13 @@
             <p>Чтобы у тебя было больше времени на себя и свои увлечения! 🎨</p>
             <p>Чтобы ты знала, как сильно я тебя люблю и ценю! 💖</p>
             <p>Ты — самый важный человек в моей жизни! 🌈</p>
-            <p>Чтобы у тебя наконец появился красный мерседес кабриалет💝</p>
+            <p>💫 Чтобы у тебя наконец появился красный мерседес кабриолет или робот-пылесос Алёша 💫</p>
             
 
-            <p style="text-align: center; font-size: 1.3em; margin-top: 20px;">
-                С Днём Мамы! 🥳🎉🎊
+            <p style="text-align: center; font-size: 1.3em; margin-top: 20px;">              >     Мы всей семьёй  поздравляем  тебя                >             Днём Мамы! 🥳🎉🎊
             </p>
 
-            <p5>Сайт я писал +- 1 - 2 часа с 23-х до 1 часа ночи, старался очень сильно так как сроки были сжатые))</p5>
+            <p5>P.S ==Сайт я писал +- 1 - 2 часа с 23-х до 1 часа ночи, старался очень сильно так как сроки были сжатые))==</p5>
         </div>
     </div>
 
