--- a/index.html
+++ b/index.html
@@ -341,13 +341,13 @@
             <p>Чтобы у тебя было больше времени на себя и свои увлечения! 🎨</p>
             <p>Чтобы ты знала, как сильно мы тебя любим и ценим! 💖</p>
             <p>Ты — самый важный человек в моей жизни и в жизни нашей семьи! 🌈</p>
-            <p>💫Желаю чтобы у тебя наконец появился красный мерседес кабриолет или робот-пылесос Алёша (Папа знает что подарить ) кхм... ) 💫</p>
+            <p>💫Желаю чтобы у тебя наконец появился красный мерседес кабриолет или робот-пылесос Алёша (Папа знает что подарить кхм... ) 💫</p>
             
 
-            <p style="text-align: center; font-size: 1.3em; margin-top: 20px;">              >     Мы всей семьёй  поздравляем  тебя                             С.            Днём Мамы! 🥳🎉🎊
+            <p style="text-align: center; font-size: 1.3em; margin-top: 20px;">              >     Мы всей семьёй  поздравляем  тебя                             С             Днём Мамы! 🥳🎉🎊
             </p>
 
-            <p5>P.S ==Сайт я писал +- 1 - 2 часа с 23-х до 1 часа ночи, старался очень сильно так как сроки были сжатые))==</p5>
+            <p7>P.S ==Сайт я писал +- 1 - 2 часа с 23-х до 1 часа ночи, старался очень сильно так как сроки были сжатые))==</p7>
         </div>
     </div>
 
